# zuoliangyu-cc-switch-web

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  README_EN.md  README_JA.md  README_ZH.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: web-ci.yml  web-package.yml
backend/: Cargo.toml
backend/src/: app_config.rs  app_store.rs  auto_launch.rs  claude_mcp.rs  config.rs  gemini_config.rs  hermes_config.rs  lib.rs  prompt_files.rs  provider.rs  settings.rs  store.rs  web_server.rs
backend/src/commands/: auth.rs  codex_oauth.rs  config.rs  env.rs  hermes.rs  import_export.rs  misc.rs  mod.rs  model_fetch.rs  omo.rs  prompt.rs  provider.rs  proxy.rs  session_manager.rs  settings.rs  subscription.rs  sync_support.rs  workspace.rs
backend/src/database/: backup.rs  mod.rs  schema.rs  tests.rs
backend/src/database/dao/: mod.rs  providers.rs  proxy.rs  settings.rs  skills.rs
backend/src/mcp/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  validation.rs
backend/src/proxy/: circuit_breaker.rs  error.rs  error_mapper.rs  failover_switch.rs  forwarder.rs  gemini_url.rs  handler_config.rs  handler_context.rs  handlers.rs  http_client.rs  hyper_client.rs  mod.rs  provider_router.rs  response_processor.rs  server.rs  sse.rs  types.rs
backend/src/proxy/providers/: adapter.rs  auth.rs  claude.rs  codex_oauth_auth.rs  copilot_auth.rs  gemini.rs  gemini_shadow.rs  mod.rs  streaming.rs  streaming_responses.rs  transform.rs  transform_gemini.rs  transform_responses.rs
backend/src/proxy/usage/: parser.rs
backend/src/services/: env_checker.rs  env_manager.rs  mcp.rs  mod.rs  model_fetch.rs  omo.rs  prompt.rs  proxy.rs  skill.rs  speedtest.rs  stream_check.rs  subscription.rs  usage_stats.rs  webdav_auto_sync.rs
backend/src/services/provider/: live.rs  mod.rs
backend/src/session_manager/: mod.rs
backend/src/session_manager/providers/: claude.rs  gemini.rs  mod.rs  opencode.rs
deploy/systemd/: cc-switch-web.service.example
docs-dev/: web-distribution-startup-plan.md  web-local-service-migration-plan.md  web-parity-2026-04.md  web-parity-v3.14.0-plan-2026-04.md  web-remaining-gap-audit.md
scripts/: README.md  build.ps1  check.mjs  check.ps1  dev-web.mjs  dev.mjs  dev.ps1  package-artifacts.ps1  run-web-release.cmd  run-web-release.command  run-web-release.ps1  run-web.cmd  run-web.ps1  run-web.sh  start-web.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_config.rs  (+10 more)
(+170 files in other folders)
